--- a/src/Components/Navbar/navbar.module.css
+++ b/src/Components/Navbar/navbar.module.css
@@ -3,12 +3,12 @@
   justify-content: space-between;
   align-items: center;
   color: var(--text-color);
-  padding: 5px 15%;
-  background: var(--background-color);
-  position: fixed;
+  padding: 5px 0;
   width: 100%;
+  position: relative;
   z-index: 10;
   font-size: 0.9rem;
+  max-width: 1400px;
 }
 
 .logo {
@@ -22,7 +22,7 @@
 .nav_list {
   display: flex;
   align-items: center;
-  gap: 3rem;
+  gap: 100px;
 }
 
 .btn {
@@ -40,15 +40,21 @@
   }
 
   .nav_list {
+    gap: 5rem;
+    font-size: 13px;
+  }
+}
+
+@media  (max-width: 1000px) {
+  .nav_list {
     gap: 2.5rem;
     font-size: 13px;
   }
 }
 
-@media  (max-width: 765px) {
+@media  (max-width: 768px) {
   .nav_list,
   .btn {
     display: none;
-    flex-direction: column;
   }
 }
