--- a/src/Pages/Home/home.module.css
+++ b/src/Pages/Home/home.module.css
@@ -1,22 +1,25 @@
 .home_section1 {
-  position: relative;
-  min-height: 100vh;
+  min-height: calc(100vh - 48px);
+  width: 100%;
   background: linear-gradient(to right, rgba(0, 0, 0, 0.4), rgba(0, 0, 0, 0)), url(../../assets/ngrave/ngrave-bg6.webp);
-  padding: 300px 15%;
+  padding: 0px 5%;
   background-position: center;
   background-repeat: no-repeat;
+
+  display: flex;
+  justify-content: center;
+  flex-direction: column;
+}
+
+.home_section1 > div:first-child {
+  grid-template-columns: repeat(2, 1fr);
 }
 
 .banner_div {
-  position: absolute;
-  width: 100%;
-  height: 100%;
-  display: none;
+  visibility: hidden;
 }
 
-.home_context {
-  position: absolute;
-  top: 300px;
+.home_context { 
   width: 550px;
 
   display: flex;
@@ -41,6 +44,7 @@
   overflow: hidden;
   padding-top: 48px;
   color: var(--grey-text);
+  
   display: flex;
   flex-direction: column;
 }
@@ -55,7 +59,6 @@
 
 .section2_main_img div p {
   margin-bottom: 1rem;
-  font-size: 1.2rem;
 }
 
 .section2_main_img div a {
@@ -137,6 +140,10 @@
   }
 }
 
+@media (max-width: 980px) {
+  
+}
+
 @media  (max-width: 770px) {
   /*===== SECTION1 MEDIA QUERY =======*/
   h1 {
@@ -170,12 +177,13 @@
     font-size: 16px;
   }
 
+  .home_section1 > div:first-child {
+    grid-template-columns: 1fr;
+  }
+
   .banner_div {
-    position: static;
-    bottom: 0;
     height: 50%;
-    display: block;
-    width: 100%;
+    visibility: visible;
   }
 
   .home_banner {
