--- a/src/Pages/Home/home.module.css
+++ b/src/Pages/Home/home.module.css
@@ -122,6 +122,29 @@
   transition: all 0.3s ease-in-out;
 }
 
+/*====================================== SECTION 4 ======================================================*/
+.section4 > p{
+  font-size: 52px;
+  line-height: 60px;
+}
+
+.section4_table table td {
+  padding: 1.5rem;
+  font-weight: 600;
+  font-size: 17px;
+
+  max-width: 300px;
+  color: grey;
+}
+
+.section4_table table td:nth-child(2) {
+  color: #000;
+  background: #00cc9954;
+  border-right: 1px dashed #00CC99;
+  border-left: 1px dashed #00CC99;
+  overflow: hidden;
+}
+
 
 /*====================================== MEDIA QUERIES ======================================================*/
 @media  (max-width: 1200px) {
@@ -141,7 +164,17 @@
 }
 
 @media (max-width: 980px) {
-  
+  section {
+    width: 100%;
+    min-height: 100vh;
+    padding-inline: 5%;
+  }
+
+  .section4 > p {
+    font-size: 45px;
+    line-height: normal;
+  }
+
 }
 
 @media  (max-width: 770px) {
@@ -209,11 +242,69 @@
   .discover_link > p > span:first-child{
     display: none;
   }
+
+  .section4 > p {
+    font-size: 30px;
+    line-height: normal;
+  }
+
+  .section4_table table td:nth-child(1) {
+    display: none;
+  }
+
+  .section4_table table td {
+    padding: 1.5rem;
+    padding-inline: 1rem;
+    font-size: 14px;
+  }
 }
 
 @media (max-width: 600px) {
   .home_context {
     padding: 0 3%;
+  }
+}
 
+@media (max-width: 450px) {
+  .section4_table table td {
+    font-size: 12px;
+    padding: 0.7rem;
+    font-size: 14px;
+  }
+
+  .section2 iframe {
+    height: 400px;
+  }
+}
+
+@media (prefers-reduced-motion: no-preference) {
+  .slide_in {
+    animation: slideIn 1s linear 1 both;
+  }
+
+  @keyframes slideIn {
+    from {
+      opacity: 0;
+      transform: translateY(100px);
+    } to {
+      opacity: 1;
+      transform: translateY(0px);
+    }
+  }
+
+  .slide_in_top {
+    animation: slideIn linear both;
+    animation-timeline: view();
+    animation-range: entry 10% cover 70vh;
+  }
+
+  @keyframes slideInTop {
+    from {
+      opacity: 0;
+      transform: translateY(100px);
+    } to {
+      opacity: 1;
+      transform: translateY(0px);
+    }
   }
 }
