--- a/src/index.css
+++ b/src/index.css
@@ -1,6 +1,10 @@
 @import "tailwindcss";
 @import url('https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300..800;1,300..800&family=Outfit:wght@100..900&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
 
+@theme {
+  --primary-color: rgb(255, 255, 255);
+}
+
 :root {
   font-family: system-ui, Avenir, Helvetica, Arial, sans-serif;
 
@@ -16,6 +20,7 @@
   --section-1-bg: rgba(0, 0, 0, 0.5);
   --link-color: #3197FF;
 }
+
 * {
   font-family: "Poppins", sans-serif;
 }
