Semi-footer completed

--- a/src/Pages/Home/home.module.css
+++ b/src/Pages/Home/home.module.css
@@ -316,3 +316,11 @@
     }
   }
 }
+
+/*===================== SEMI FOOTER ===========================================*/
+.semi_footer {
+  background: url('../../assets/ngrave/ngrave-bg7.webp');
+  background-repeat: no-repeat;
+  background-position: center;
+  background-size: cover;
+}
