--- a/src/Pages/Home/home.module.css
+++ b/src/Pages/Home/home.module.css
@@ -4,6 +4,7 @@
   background: linear-gradient(to right, rgba(0, 0, 0, 0.4), rgba(0, 0, 0, 0)), url(../../assets/ngrave/ngrave-bg6.webp);
   padding: 0px 5%;
   background-position: center;
+  background-size: cover;
   background-repeat: no-repeat;
 
   display: flex;
@@ -33,7 +34,7 @@
 
 /*====================================== SECTION 2=======================================================*/
 
-.section2 > div{
+.section2 > div > div{
   display: flex;
   gap: 40px;
 }
@@ -99,7 +100,7 @@
 }
 
 /*====================================== SECTION 3 ======================================================*/
-.section3 > p{
+.section3 > div > p{
   font-size: 52px;
   line-height: 60px;
 }
@@ -122,7 +123,7 @@
 }
 
 /*====================================== SECTION 4 ======================================================*/
-.section4 > div{
+.section4 > div > div{
   align-items: center;
 }
 
