--- a/src/index.css
+++ b/src/index.css
@@ -36,7 +36,9 @@ button {
 }
 
 body {
-  background: rgba(10, 10, 10, 0.938);
+  background: rgba(0, 0, 0, 0.938);
+  display: flex;
+  flex-direction: column;
   /*display: flex;
   justify-content: center;*/
 }
