--- a/src/Pages/Home/home.module.css
+++ b/src/Pages/Home/home.module.css
@@ -1,36 +1,3 @@
-.home_section1 {
-  min-height: calc(100vh - 48px);
-  width: 100%;
-  background: linear-gradient(to right, rgba(0, 0, 0, 0.4), rgba(0, 0, 0, 0)), url(../../assets/ngrave/ngrave-bg6.webp);
-  padding: 0px 5%;
-  background-position: center;
-  background-size: cover;
-  background-repeat: no-repeat;
-
-  display: flex;
-  justify-content: center;
-  flex-direction: column;
-}
-
-.home_section1 > div:first-child {
-  grid-template-columns: repeat(2, 1fr);
-}
-
-.banner_div {
-  visibility: hidden;
-}
-
-.home_context { 
-  width: 550px;
-
-  display: flex;
-  flex-direction: column;
-  gap: 30px;
-}
-
-.span_text {
-  color: var(--span-text-color);
-}
 
 /*====================================== SECTION 2=======================================================*/
 
@@ -194,68 +161,20 @@
 }
 
 @media (max-width: 1024px) {
-  section {
-    width: 100%;
-    min-height: 100vh;
-    padding-inline: 5%;
-  }
-
-  /*===================== SECTION 4 ==================*/
+  /*===================== SECTION 3 ==================*/
   .section3 > p {
     font-size: 45px;
     line-height: normal;
   }
 
+  .footer_abs {
+    display: none;
+  }
 }
 
-@media  (max-width: 770px) {
-  /*===== SECTION1 MEDIA QUERY =======*/
-  h1 {
-    font-size: 32px;
-    line-height: normal;
-  }
-
-  .home_section1 {
-    position: static;
-    padding: 0;
-
-    display: flex;
-    flex-direction: column;
-    gap: 30px;
-    background: rgb(13, 10, 26);
-  }
-
-  .home_context {
-    margin-top: 100px;
-    padding: 0 5%;
-    width: 100%;
-
-    display: flex;
-    flex-direction: column;
-    gap: 20px;
-  }
-
-  .home_context > div,
-  button {
-    font-size: 16px;
-  }
-
-  .home_section1 > div:first-child {
-    grid-template-columns: 1fr;
-  }
-
-  .banner_div {
-    height: 50%;
-    visibility: visible;
-  }
-
-  .home_banner {
-    object-fit: contain;
-  }
-
-  
+@media  (max-width: 770px) {  
   /*===== SECTION2 MEDIA QUERY =======*/
-  .section2 > div {
+  .section2 > div > div {
     flex-direction: column;
     gap: 20px;
   }
@@ -288,11 +207,10 @@
     padding-inline: 1rem;
     font-size: 14px;
   }
-}
 
-@media (max-width: 600px) {
-  .home_context {
-    padding: 0 3%;
+
+  .section3_table table td:first-child {
+    display: none;
   }
 }
 
@@ -308,39 +226,6 @@
   }
 }
 
-/*ANIMATIONS*/
-@media (prefers-reduced-motion: no-preference) {
-  .slide_in {
-    animation: slideIn 1s linear 1 both;
-  }
-
-  @keyframes slideIn {
-    from {
-      opacity: 0;
-      transform: translateY(100px);
-    } to {
-      opacity: 1;
-      transform: translateY(0px);
-    }
-  }
-
-  .slide_in_top {
-    animation: slideIn linear both;
-    animation-timeline: view();
-    animation-range: entry 10% cover 70vh;
-  }
-
-  @keyframes slideInTop {
-    from {
-      opacity: 0;
-      transform: translateY(100px);
-    } to {
-      opacity: 1;
-      transform: translateY(0px);
-    }
-  }
-}
-
 /*===================== SEMI FOOTER ===========================================*/
 .semi_footer {
   background: url('../../assets/ngrave/ngrave-bg7.webp');
@@ -353,10 +238,10 @@
 .footer_grid {
   display: grid;
   grid-template-columns: repeat(auto-fill, minmax(150px, 1fr));
-  gap: 20px;
+  gap: 30px;
 }
 
-.footer_grid > div > ul > li, .footer_grid h2{
+.footer_grid h2{
   margin-bottom: 5px;
   white-space: nowrap;
 }
