--- a/src/index.css
+++ b/src/index.css
@@ -52,6 +52,10 @@ img {
   max-width: 100%;
 }
 
+.icon {
+  font-size: 20px
+}
+
 /*============================ media query =======================*/
 @media (max-width: 1024px) {
   section {
