--- a/src/Pages/Home/SectionD/sectionD.module.css
+++ b/src/Pages/Home/SectionD/sectionD.module.css
@@ -3,18 +3,18 @@
   align-items: center;
 }
 
-.discover_link > p > span:first-child{
+.subImg > p > span:first-child {
   transform: translateX(100%);
   opacity: 0;
   visibility: hidden;
   transition: all 0.1s ease-in-out;
 }
 
-.discover_link:hover > p {
+.discover_link:hover > .subImg > p {
   background: black;
 }
 
-.discover_link_others:hover > p {
+.discover_link_others:hover > .subImg > p {
   background: white;
 }
 
@@ -31,9 +31,55 @@
   gap: 1rem;
 }
 
+@media  (max-width: 1322px) {  
+  .section4 {
+    padding-inline: 5%;
+  }
+
+  .section4 > div > div > h1 {
+    font-size: 32px;
+    line-height: normal;
+  }
+
+  .section4 > div > div > p {
+    font-size: 16px;
+  }
+
+  .discover_link > div h1 {
+    font-size: 30px;
+  }
+}
+
+@media  (max-width: 1024px) {  
+  .section4 {
+    padding-inline: 5%;
+  }
+
+  .discover_link_fr {
+    flex-direction: column;
+    padding-top: 70px;
+  }
+
+  .section4_grid {
+    display: grid;
+    grid-template-columns: repeat(auto-fill, minmax(300px, 1fr));
+    gap: 1rem;
+  }
+
+  .section4_grid > div > div:first-child {
+    padding: 30px;
+  }
+}
+
+@media  (max-width: 1000px) {  
+  .section4_grid > div > div > h3 {
+    font-size: 25px;
+  }
+}
+
 @media  (max-width: 770px) {  
   /*===== SECTION4 MEDIA QUERY =======*/
-  .section4 > div {
+  .section4 > div > div {
     flex-direction: column;
     gap: 20px;
   }
